# rag_pdf

./: api.py  docker-compose.yml  pyproject.toml  query_rag.py
backend/: Dockerfile  api.py  populate_database.py  query_rag.py  requirements.txt
backend/chroma/: chroma.sqlite3
frontend/: Dockerfile
frontend/src/: App.tsx
