[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Rafael Barbosa <rafaelbcon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
langchain = "^0.3.7"
chromadb = "^0.5.20"
pypdf = "^5.1.0"
pytest = "^8.3.3"
boto3 = "^1.35.66"
langchain-community = "^0.3.7"
langchain-ollama = "^0.2.0"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
